@@ -4,6 +4,7 @@ use lib 't';
 use MockFurl;
 use File::Temp;
 use Digest::MD5 qw(md5_hex);
+use Encode;
 
 use Catmandu::Importer::getJSON;
 
@@ -11,26 +12,29 @@ my $dir = File::Temp::tempdir(CLEANUP=>1);
 my $counter = 0;
 my %args = (
     client => MockFurl::new( 
-        content => sub { '{"c":'.$counter++.'}' } 
+        content => sub { '{"'.encode_utf8('ä').'":'.$counter++.'}' } 
     ),
     file => \"http://example.org\nhttp://example.com\nhttp://example.org",
 );
 
 my $importer = Catmandu::Importer::getJSON->new(%args);
-is_deeply $importer->to_array, [{c=>0},{c=>1},{c=>2}], 'cache off'; 
+my $a = $importer->to_array;
+note explain $a;
+is_deeply $a, [{'ä'=>0},{'ä'=>1},{'ä'=>2}], 'cache off'; 
 
 $importer = Catmandu::Importer::getJSON->new(%args, cache => 1);
-is_deeply $importer->to_array, [{c=>3},{c=>4},{c=>3}], 'in-memory cache'; 
+note explain $Catmandu::Importer::getJSON::CACHE;
+is_deeply $importer->to_array, [{'ä'=>3},{'ä'=>4},{'ä'=>3}], 'in-memory cache'; 
+note explain $Catmandu::Importer::getJSON::CACHE;
 
 $importer = Catmandu::Importer::getJSON->new(%args, cache => $dir);
-is_deeply $importer->to_array, [{c=>5},{c=>6},{c=>5}], 'file cache';
+is_deeply $importer->to_array, [{'ä'=>5},{'ä'=>6},{'ä'=>5}], 'file cache';
 
 my $file = $dir.'/'.md5_hex("http://example.org").'.json';
-my $json = do { local (@ARGV,$/) = $file; <> };
-is $json, <<JSON, 'cache file';
-{
-   "c" : 5
-}
-JSON
+open my $fh, "<:utf8", $file;
+is <$fh>, '{"ä":5}', 'cache file';
+
+$importer = Catmandu::Importer::getJSON->new(%args, cache => 1);
+is_deeply $importer->to_array, [{'ä'=>3},{'ä'=>4},{'ä'=>3}], 'in-memory cache is global'; 
 
 done_testing;
