@@ -1,6 +1,7 @@
 Changelog for Catmandu-Importer-getJSON
 
 {{$NEXT}}
+ - made in-memory cache global
 
 0.43  2015-05-10 22:12:01 CEST
  - added caching
